--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,17 @@ spring:
         properties:
           hibernate:
             dialect: org.hibernate.dialect.MySQL8Dialect
+
+
+
+springdoc:
+  swagger-ui:
+    path: /api-docs
+    tryItOutEnabled: true
+    filter: true
+  api-docs:
+    path: /order-api-docs
+bezkoder:
+  openapi:
+    dev-url: http://localhost:8080
+    prod-url: https://bezkoder-api.com
